# champ-sage

./: .env.example  .gitignore  .npmrc  .prettierignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  evalite.config.ts  index.html  overlay-strip.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.electron.json  vite.config.ts  vitest.config.ts
docs/: WIP-STATUS.md  coaching-engine.md  exploration-meta-builds-item-catalog.md  exploration.md  future-feature-ideas.md  game-history-decision.md  gold-aware-item-recommendations.md  implementation-plan.md  ow-electron-migration-plan.md  prd.md  product-vision.md  reactive-architecture-exploration.md  technical-reference.md
electron/: bounds-store.test.ts  bounds-store.ts  gep-replay-filter.test.ts  gep-replay-filter.ts  lcu-write.test.ts  lcu-write.ts  logger.ts  main.ts  preload.ts  strip-bounds-store.test.ts  strip-bounds-store.ts  strip-resize-lock.test.ts  strip-resize-lock.ts  tsup.config.ts  window-placement.test.ts  window-placement.ts
plans/: exploration.md  implementation-plan.md  issue-8-design-wip.md  prd.md  technical-reference.md
reports/: 2026-03-27T15-41-43.md  2026-03-27T17-46-36.md
scripts/: analyze-coverage.ts  audit-augments.ts  check-augment-modes.ts  check-augment-names.ts  check-buildpath-enum.ts  check-game.ts  consistency-test.ts  convert-fixtures-multiturn.ts  discover-candidates.ts  dump-data.ts  eval-pbe-augments.ts  extract-fixtures.ts  fetch-meta-builds.ts  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+439 files in other folders)
